--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="skill-row">
         <img class="laptop" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/279/laptop_1f4bb.png" alt="laptop-img">
         <h3>A Coder</h3>
-        <p>Just an another guy who loves to code but don't know who to make the code executable😂.</p>
+        <p>Just an another guy who loves to code but don't know how to make the code executable😂.</p>
       </div>
       <div class="skill-row">
         <img class="guitar" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/279/guitar_1f3b8.png" alt="guitar-img">
